[package]
name = "pong"
version = "0.1.0"
authors = [ "Nolan Tait", "Peregrine" ]
edition = "2021"
description = "Tainted Coders' Bevy Tutorial: Pong. https://taintedcoders.com/bevy/pong-tutorial/"
readme = "README.md"
repository = "https://github.com/peregrine-l/pong-bevy-tutorial"
license = "MIT"
keywords = [ "game", "bevy-game", "rust-game", "tutorial" ]
categories = [ "games" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
